gitops/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-webapp-ingress
  labels:
    app: fastapi-webapp
spec:
  ingressClassName: nginx
  rules:
  - host: argo.workshop
    http:
      paths:
      - backend:
          service:
            name: fastapi-webapp-service
            port:
              number: 8080
        path: /
        pathType: Exact
